// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All props 1`] = `
<div>
  <div
    className="apptr__form-input-container"
  >
    <label>
       
      main:dateTime:Day
    </label>
    <select
      autoComplete="none"
      className="tr__form-input-select apptr__input _input-select"
      id="DayRangeWidgetId_periodGroup"
      name="DayRangeWidgetId_periodGroup"
      onChange={[Function]}
      style={
        Object {
          "overflow": "hidden",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
      value="custom"
    >
      <option
        value="custom"
      >
        main:dateTime:dayPeriod:Custom
      </option>
      <option
        value="week"
      >
        main:dateTime:dayPeriod:Week
      </option>
      <option
        value="week-end"
      >
        main:dateTime:dayPeriod:WeekEnd
      </option>
      <option
        value="all"
      >
        main:dateTime:dayPeriod:All
      </option>
    </select>
  </div>
  <div
    className="tr__form-dayPicker"
  >
    <div
      className="dayPickerOption"
    >
      <input
        checked={true}
        disabled={false}
        id="DayRangeWidgetId_Monday"
        onChange={[Function]}
        type="checkbox"
        value="Monday"
      />
      <label
        htmlFor="DayRangeWidgetId_Monday"
      >
        main:dateTime:weekdaysAbbr:monday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={true}
        disabled={false}
        id="DayRangeWidgetId_Tuesday"
        onChange={[Function]}
        type="checkbox"
        value="Tuesday"
      />
      <label
        htmlFor="DayRangeWidgetId_Tuesday"
      >
        main:dateTime:weekdaysAbbr:tuesday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={true}
        disabled={false}
        id="DayRangeWidgetId_Wednesday"
        onChange={[Function]}
        type="checkbox"
        value="Wednesday"
      />
      <label
        htmlFor="DayRangeWidgetId_Wednesday"
      >
        main:dateTime:weekdaysAbbr:wednesday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={false}
        disabled={false}
        id="DayRangeWidgetId_Thursday"
        onChange={[Function]}
        type="checkbox"
        value="Thursday"
      />
      <label
        htmlFor="DayRangeWidgetId_Thursday"
      >
        main:dateTime:weekdaysAbbr:thursday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={false}
        disabled={false}
        id="DayRangeWidgetId_Friday"
        onChange={[Function]}
        type="checkbox"
        value="Friday"
      />
      <label
        htmlFor="DayRangeWidgetId_Friday"
      >
        main:dateTime:weekdaysAbbr:friday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={false}
        disabled={false}
        id="DayRangeWidgetId_Saturday"
        onChange={[Function]}
        type="checkbox"
        value="Saturday"
      />
      <label
        htmlFor="DayRangeWidgetId_Saturday"
      >
        main:dateTime:weekdaysAbbr:saturday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={false}
        disabled={false}
        id="DayRangeWidgetId_Sunday"
        onChange={[Function]}
        type="checkbox"
        value="Sunday"
      />
      <label
        htmlFor="DayRangeWidgetId_Sunday"
      >
        main:dateTime:weekdaysAbbr:sunday
      </label>
    </div>
  </div>
</div>
`;

exports[`Disabled 1`] = `
<div>
  <div
    className="apptr__form-input-container"
  >
    <label>
       
      main:dateTime:Day
    </label>
    <select
      autoComplete="none"
      className="tr__form-input-select apptr__input _input-select"
      disabled={true}
      id="DayRangeWidgetId_periodGroup"
      name="DayRangeWidgetId_periodGroup"
      onChange={[Function]}
      style={
        Object {
          "overflow": "hidden",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
      value="custom"
    >
      <option
        value="custom"
      >
        main:dateTime:dayPeriod:Custom
      </option>
      <option
        value="week"
      >
        main:dateTime:dayPeriod:Week
      </option>
      <option
        value="week-end"
      >
        main:dateTime:dayPeriod:WeekEnd
      </option>
      <option
        value="all"
      >
        main:dateTime:dayPeriod:All
      </option>
    </select>
  </div>
  <div
    className="tr__form-dayPicker"
  >
    <div
      className="dayPickerOption"
    >
      <input
        checked={true}
        disabled={true}
        id="DayRangeWidgetId_Monday"
        onChange={[Function]}
        type="checkbox"
        value="Monday"
      />
      <label
        htmlFor="DayRangeWidgetId_Monday"
      >
        main:dateTime:weekdaysAbbr:monday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={true}
        disabled={true}
        id="DayRangeWidgetId_Tuesday"
        onChange={[Function]}
        type="checkbox"
        value="Tuesday"
      />
      <label
        htmlFor="DayRangeWidgetId_Tuesday"
      >
        main:dateTime:weekdaysAbbr:tuesday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={true}
        disabled={true}
        id="DayRangeWidgetId_Wednesday"
        onChange={[Function]}
        type="checkbox"
        value="Wednesday"
      />
      <label
        htmlFor="DayRangeWidgetId_Wednesday"
      >
        main:dateTime:weekdaysAbbr:wednesday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={false}
        disabled={true}
        id="DayRangeWidgetId_Thursday"
        onChange={[Function]}
        type="checkbox"
        value="Thursday"
      />
      <label
        htmlFor="DayRangeWidgetId_Thursday"
      >
        main:dateTime:weekdaysAbbr:thursday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={false}
        disabled={true}
        id="DayRangeWidgetId_Friday"
        onChange={[Function]}
        type="checkbox"
        value="Friday"
      />
      <label
        htmlFor="DayRangeWidgetId_Friday"
      >
        main:dateTime:weekdaysAbbr:friday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={false}
        disabled={true}
        id="DayRangeWidgetId_Saturday"
        onChange={[Function]}
        type="checkbox"
        value="Saturday"
      />
      <label
        htmlFor="DayRangeWidgetId_Saturday"
      >
        main:dateTime:weekdaysAbbr:saturday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={false}
        disabled={true}
        id="DayRangeWidgetId_Sunday"
        onChange={[Function]}
        type="checkbox"
        value="Sunday"
      />
      <label
        htmlFor="DayRangeWidgetId_Sunday"
      >
        main:dateTime:weekdaysAbbr:sunday
      </label>
    </div>
  </div>
</div>
`;

exports[`Do not show dropdown 1`] = `
<div>
  <div
    className="tr__form-dayPicker"
  >
    <div
      className="dayPickerOption"
    >
      <input
        checked={true}
        disabled={false}
        id="DayRangeWidgetId_Monday"
        onChange={[Function]}
        type="checkbox"
        value="Monday"
      />
      <label
        htmlFor="DayRangeWidgetId_Monday"
      >
        main:dateTime:weekdaysAbbr:monday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={true}
        disabled={false}
        id="DayRangeWidgetId_Tuesday"
        onChange={[Function]}
        type="checkbox"
        value="Tuesday"
      />
      <label
        htmlFor="DayRangeWidgetId_Tuesday"
      >
        main:dateTime:weekdaysAbbr:tuesday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={true}
        disabled={false}
        id="DayRangeWidgetId_Wednesday"
        onChange={[Function]}
        type="checkbox"
        value="Wednesday"
      />
      <label
        htmlFor="DayRangeWidgetId_Wednesday"
      >
        main:dateTime:weekdaysAbbr:wednesday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={false}
        disabled={false}
        id="DayRangeWidgetId_Thursday"
        onChange={[Function]}
        type="checkbox"
        value="Thursday"
      />
      <label
        htmlFor="DayRangeWidgetId_Thursday"
      >
        main:dateTime:weekdaysAbbr:thursday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={false}
        disabled={false}
        id="DayRangeWidgetId_Friday"
        onChange={[Function]}
        type="checkbox"
        value="Friday"
      />
      <label
        htmlFor="DayRangeWidgetId_Friday"
      >
        main:dateTime:weekdaysAbbr:friday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={false}
        disabled={false}
        id="DayRangeWidgetId_Saturday"
        onChange={[Function]}
        type="checkbox"
        value="Saturday"
      />
      <label
        htmlFor="DayRangeWidgetId_Saturday"
      >
        main:dateTime:weekdaysAbbr:saturday
      </label>
    </div>
    <div
      className="dayPickerOption"
    >
      <input
        checked={false}
        disabled={false}
        id="DayRangeWidgetId_Sunday"
        onChange={[Function]}
        type="checkbox"
        value="Sunday"
      />
      <label
        htmlFor="DayRangeWidgetId_Sunday"
      >
        main:dateTime:weekdaysAbbr:sunday
      </label>
    </div>
  </div>
</div>
`;
